--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">imdang</string>
+    <string name="kakao_login">카카오 로그인</string>
+    <string name="google_login">구글 로그인</string>
 </resources>
