--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
     <string name="kakao_login">카카오 로그인</string>
     <string name="google_login">구글 로그인</string>
     <string name="next">다음</string>
-
     <string name="basic_information_title">기본 정보 입력</string>
     <string name="basic_information_sub_title">추후 진행할 이벤트를 위해 조사하고 있어요\n개인정보는 유출되지 않으니 걱정 마세요</string>
     <string name="nickname">닉네임</string>
@@ -20,4 +19,8 @@
     <string name="first_insight">동등한 퀄리티의 인사이트를 공유하고 싶어요 </string>
     <string name="second_insight">의미 있는 인사이트를 공유하고 싶어요</string>
     <string name="third_insight">지속적으로 양질의 인사이트 공유를 하고 싶어요</string>
+    <string name="home">홈</string>
+    <string name="storage">보관함</string>
+    <string name="home_search">탐색</string>
+    <string name="home_exchange">교환소</string>
 </resources>
