--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -23,4 +23,11 @@
     <string name="storage">보관함</string>
     <string name="home_search">탐색</string>
     <string name="home_exchange">교환소</string>
+    <string name="home_banner_content">아파트임당은\n왜 1:1 교환시스템을 도입했을까요?</string>
+    <string name="home_my_insight_subject">내가 작성한 단지 인사이트</string>
+    <string name="home_new_insight_subject">오늘 새롭게 올라온 인사이트</string>
+    <string name="home_recommend_insight_subject">추천 TOP 10 인사이트</string>
+    <string name="see_all">전체보기</string>
+
+    <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
 </resources>
