--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="home_my_insight_subject">내가 작성한 단지 인사이트</string>
     <string name="home_new_insight_subject">오늘 새롭게 올라온 인사이트</string>
     <string name="home_recommend_insight_subject">추천 TOP 10 인사이트</string>
+    <string name="home_recommend_insight_subject_point">TOP 10</string>
+    <string name="home_recommend_insight_page">\ / 4</string>
     <string name="see_all">전체보기</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
