--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
 
     <string name="basic_information_title">기본 정보 입력</string>
     <string name="basic_information_sub_title">추후 진행할 이벤트를 위해 조사하고 있어요\n개인정보는 유출되지 않으니 걱정 마세요</string>
-    <string name="nick_name">닉네임</string>
-    <string name="nick_name_hint">임당이</string>
+    <string name="nickname">닉네임</string>
+    <string name="nickname_hint">임당이</string>
     <string name="birth_date">생년월일</string>
     <string name="birth_date_hint">2001.01.23</string>
     <string name="gender">성별</string>
