--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -30,6 +30,9 @@
     <string name="home_recommend_insight_subject_point">TOP 10</string>
     <string name="home_recommend_insight_page">\ / 4</string>
     <string name="see_all">전체보기</string>
+    <string name="pass_held">보유 패스권</string>
+    <string name="requested_details">내가 요청한 내역</string>
+    <string name="received_details">요청 받은 내역</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
 </resources>
