--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -33,6 +33,15 @@
     <string name="pass_held">보유 패스권</string>
     <string name="requested_details">내가 요청한 내역</string>
     <string name="received_details">요청 받은 내역</string>
+    <string name="waiting">대기중</string>
+    <string name="refusal">거절</string>
+    <string name="exchange_completed">교환 완료</string>
+    <string name="waiting_details_existence">대기 중 내역은 최근 7일간의 기록만 표시돼요.</string>
+    <string name="waiting_details_nonexistence">대기 중인 내역이 없어요.</string>
+    <string name="refusal_details_existence">거절 내역은 최근 7일간의 기록만 표시돼요.</string>
+    <string name="refusal_details_nonexistence">거절 내역이 없어요.</string>
+    <string name="exchange_details_existence">교환한 인사이트는 보관함에 저장되며, 완료 내역은\n최근 7일간의 기록만 표시돼요.</string>
+    <string name="exchange_details_nonexistence">교환 완료 내역이 없어요.</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
 </resources>
