feat: 인사이트 지역 화면 UI 구현

--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -48,6 +48,8 @@
     <string name="apt">단지</string>
     <string name="insight">인사이트</string>
     <string name="see_just_my_insight">내 인사이트만 보기</string>
+    <string name="region_all">지역 전체</string>
+    <string name="select_complete">선택 완료</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
 </resources>
