--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -51,6 +51,37 @@
     <string name="see_just_my_insight">내 인사이트만 보기</string>
     <string name="region_all">지역 전체</string>
     <string name="select_complete">선택 완료</string>
+    <string name="write_insight">인사이트 작성</string>
+    <string name="basic_info">기본 정보</string>
+    <string name="infra">인프라</string>
+    <string name="apt_environment">단지 환경</string>
+    <string name="apt_facility">단지 시설</string>
+    <string name="good_news">호재</string>
+    <string name="write_complete">작성 완료</string>
+    <string name="cover_image">표지 이미지</string>
+    <string name="image_add">이미지 추가</string>
+    <string name="title">제목</string>
+    <string name="apt_address">단지 주소</string>
+    <string name="date_of_visit">다녀온 날짜</string>
+    <string name="time_of_visit">다녀온 시간</string>
+    <string name="asterisk">*</string>
+    <string name="morning">아침</string>
+    <string name="day">점심</string>
+    <string name="evening">저녁</string>
+    <string name="night">밤</string>
+    <string name="traffic">교통 수단</string>
+    <string name="car">자차</string>
+    <string name="public_traffic">대중교통</string>
+    <string name="walk">도보</string>
+    <string name="entrance_limit">출입 제한</string>
+    <string name="limited">제한됨</string>
+    <string name="need_permission">허락시 가능</string>
+    <string name="free_entrance">자유로움</string>
+    <string name="insight_summary">인사이트 요약</string>
+    <string name="insight_summary_example">예시)\n지하철역과 도보 10분 거리로 접근성이 좋지만, 근처 공사로 소음 문제가 있을 수 있을 것 같아요. 하지만 단지 내 공원이 잘 조성되어 있어 가족 단위 거주자에게 적합할 것 같아요.</string>
+    <string name="multiple_selection">복수 선택 가능</string>
+    <string name="single_selection">하나만 선택</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
+    <string name="hint_date_of_visit">예시) 2024.01.01</string>
 </resources>
