--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -81,6 +81,13 @@
     <string name="insight_summary_example">예시)\n지하철역과 도보 10분 거리로 접근성이 좋지만, 근처 공사로 소음 문제가 있을 수 있을 것 같아요. 하지만 단지 내 공원이 잘 조성되어 있어 가족 단위 거주자에게 적합할 것 같아요.</string>
     <string name="multiple_selection">복수 선택 가능</string>
     <string name="single_selection">하나만 선택</string>
+    <string name="nickname_input_standard">최소 2자-최대10자</string>
+    <string name="nickname_error_type_used">이미 사용중인 닉네임이에요</string>
+    <string name="nickname_error_type_count">2자-10자로 작성해주세요</string>
+    <string name="nickname_error_type_empty">닉네임을 입력해주세요</string>
+    <string name="birth_date_error_type_empty">생년월일을 입력해주세요</string>
+    <string name="birth_date_error_type_erroneous">잘못된 생년월일이에요</string>
+    <string name="birth_date_error_type_future">과거 또는 오늘 날짜를 입력해주세요</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
     <string name="hint_date_of_visit">예시) 2024.01.01</string>
