--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -120,6 +120,62 @@
     <string name="exchange_request">교환 요청</string>
     <string name="reject">거절</string>
     <string name="accept">수락</string>
+    <string name="not_applicable">해당 없음</string>
+    <string name="convenient_parking">주차 편리</string>
+    <string name="around_subway_station">지하철역 주변</string>
+    <string name="around_the_bus_stop">버스 정류장 주변</string>
+    <string name="apartment_with_elementary_school">초품아</string>
+    <string name="daycare_center">어린이집</string>
+    <string name="middle_school">중학교</string>
+    <string name="high_school">고등학교</string>
+    <string name="academy_district">학원가</string>
+    <string name="living_amenities">생활 편의시설</string>
+    <string name="community_center">주민센터</string>
+    <string name="convenience_store">편의점</string>
+    <string name="small_mart">소형마트</string>
+    <string name="large_mart">대형마트</string>
+    <string name="hospital">병원</string>
+    <string name="bank">은행</string>
+    <string name="cafe">카페</string>
+    <string name="beauty_salon">미용실</string>
+    <string name="pharmacy">약국</string>
+    <string name="post_office">우체국</string>
+    <string name="cultural_and_leisure_facilities">문화 및 여가시설 (단지외부)</string>
+    <string name="library">도서관</string>
+    <string name="cinema">영화관</string>
+    <string name="gym">체육관</string>
+    <string name="fitness_center">헬스장</string>
+    <string name="swimming_pool">수영장</string>
+    <string name="badminton_court">배드민턴장</string>
+    <string name="tennis_court">테니스장</string>
+    <string name="golf_driving_range">골프연습장</string>
+    <string name="river">강</string>
+    <string name="ocean">바다</string>
+    <string name="mountain">산</string>
+    <string name="park">공원</string>
+    <string name="walking_trail">산책로</string>
+    <string name="church">교회</string>
+    <string name="cathedral">성당</string>
+    <string name="restaurant_area">식당가</string>
+    <string name="market">시장</string>
+    <string name="amusement_park">놀이공원</string>
+    <string name="complex_shopping_mall">복합 쇼핑몰</string>
+    <string name="old_palace">고궁</string>
+    <string name="observatory">전망대</string>
+    <string name="national_park">국립공원</string>
+    <string name="hanok_village">한옥마을</string>
+    <string name="temple">사찰</string>
+    <string name="art_gallery">미술관</string>
+    <string name="museum">박물관</string>
+    <string name="highway">고속도로</string>
+    <string name="railway">철도</string>
+    <string name="entertainment_street">유흥거리</string>
+    <string name="industrial_complex">산업단지</string>
+    <string name="factory">공장</string>
+    <string name="garbage_incinerator">쓰레기 소각장</string>
+    <string name="high_rise_building">고층 건물</string>
+    <string name="building_under_construction">공사중 건물</string>
+    <string name="infra_overall_review">인프라 총평</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
     <string name="hint_date_of_visit">예시) 2024.01.01</string>
