feat : 인사이트 작성 - 호재 UI 구현

--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -201,6 +201,36 @@
     <string name="bench">벤치</string>
     <string name="tables_and_chairs">테이블 및 의자</string>
     <string name="fountain">분수</string>
+    <string name="subway_opens">지하철 개통</string>
+    <string name="new_high_speed_rail_station_established">고속철도역 신설</string>
+    <string name="transportation_hub_designation">교통 허브 지정</string>
+    <string name="redevelopment">재개발</string>
+    <string name="reconstruction">재건축</string>
+    <string name="remodeling">리모델링</string>
+    <string name="nearby_new_town_development">인근 신도시 개발</string>
+    <string name="complex_development">복합 단지 개발</string>
+    <string name="large_shopping_mall">대형 쇼핑몰</string>
+    <string name="department_store">백화점</string>
+    <string name="large_office_complex">대형 오피스 단지</string>
+    <string name="new_elementary_school">초등학교 신설 예정</string>
+    <string name="new_high_school">고등학교 신설 예정</string>
+    <string name="special_high_school">특목고</string>
+    <string name="private_high_school">자사고</string>
+    <string name="international_school">국제학교</string>
+    <string name="college_campus">대학 캠퍼스</string>
+    <string name="large_park">대형 공원</string>
+    <string name="river_restoration">하천 복원</string>
+    <string name="lake_restoration">호수 복원</string>
+    <string name="large_hospital">대형 병원</string>
+    <string name="cultural_center">문화센터</string>
+    <string name="performance_hall">공연장</string>
+    <string name="industry_complex">산업 단지</string>
+    <string name="corporate_relocation">기업 이전</string>
+    <string name="startup_complex">스타트업 단지</string>
+    <string name="speculative_overheating_district_unlocked">투기 과열 지구 해제</string>
+    <string name="deregulation">규제 완화</string>
+    <string name="special_zone_designation">특구 지정</string>
+    <string name="job_creation_policy">일자리 창출 정책</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
     <string name="hint_date_of_visit">예시) 2024.01.01</string>
