--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -250,6 +250,9 @@
     <string name="account_withdraw">계정 탈퇴</string>
     <string name="privacy_term">개인 정보 수집 및 이용</string>
     <string name="use_term">이용 약관</string>
+    <string name="logout_info_message">로그아웃 시 서비스 사용이\n제한돼요. 그래도 로그아웃할까요?</string>
+    <string name="logout_success_message">정상적으로 로그아웃 되었어요.</string>
+    <string name="cancel">취소</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
     <string name="hint_date_of_visit">예시) 2024.01.01</string>
