--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
     <string name="multiple_selection">복수 선택 가능</string>
     <string name="single_selection">하나만 선택</string>
     <string name="nickname_input_standard">최소 2자-최대10자</string>
+    <string name="insight_title_input_standard">최소 1자-최대20자</string>
     <string name="nickname_error_type_used">이미 사용중인 닉네임이에요</string>
     <string name="nickname_error_type_count">2자-10자로 작성해주세요</string>
     <string name="nickname_error_type_empty">닉네임을 입력해주세요</string>
@@ -260,6 +261,11 @@
     <string name="withdraw_agree">유의사항을 모두 확인했으며, 이에 동의합니다.</string>
     <string name="withdraw">탈퇴하기</string>
     <string name="withdraw_success_message">계정이 정상적으로 탈퇴되었어요.</string>
+    <string name="hint_apt_address">지번 주소</string>
+    <string name="hint_apt_name">아파트 단지 명</string>
+    <string name="insight_date_error_type_empty">날짜를 입력해주세요</string>
+    <string name="insight_date_error_type_before">2020년 이전에 다녀온 임장은 작성할 수 없어요</string>
+    <string name="insight_date_error_type_form">올바른 형식이 아니에요</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
     <string name="hint_date_of_visit">예시) 2024.01.01</string>
