--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -269,6 +269,7 @@
     <string name="yes_its_ok">네, 괜찮아요</string>
     <string name="write_insight_back_message">페이지 이동 시 작성된 내용이\n저장되지 않아요. 그래도 이동할까요?</string>
     <string name="write_insight_unselect_message">해당 없음, 잘 모르겠어요\n선택시 다른 항목들은\n선택이 해제돼요. 괜찮으신가요?</string>
+    <string name="write_insight_message">작성 완료시 인사이트가\n바로 업로드 돼요. 여유로운 시간에\n신중하게 작성해주세요.</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
     <string name="hint_date_of_visit">예시) 2024.01.01</string>
