--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="kakao_login">카카오 로그인</string>
     <string name="google_login">구글 로그인</string>
     <string name="next">다음</string>
+    <string name="previous">이전</string>
     <string name="basic_information_title">기본 정보 입력</string>
     <string name="basic_information_sub_title">추후 진행할 이벤트를 위해 조사하고 있어요\n개인정보는 유출되지 않으니 걱정 마세요</string>
     <string name="nickname">닉네임</string>
@@ -57,7 +58,7 @@
     <string name="apt_environment">단지 환경</string>
     <string name="apt_facility">단지 시설</string>
     <string name="good_news">호재</string>
-    <string name="write_complete">작성 완료</string>
+    <string name="write_complete_and_upload">작성 완료 및 업로드</string>
     <string name="cover_image">표지 이미지</string>
     <string name="image_add">이미지 추가</string>
     <string name="title">제목</string>
@@ -270,6 +271,8 @@
     <string name="write_insight_back_message">페이지 이동 시 작성된 내용이\n저장되지 않아요. 그래도 이동할까요?</string>
     <string name="write_insight_unselect_message">해당 없음, 잘 모르겠어요\n선택시 다른 항목들은\n선택이 해제돼요. 괜찮으신가요?</string>
     <string name="write_insight_message">작성 완료시 인사이트가\n바로 업로드 돼요. 여유로운 시간에\n신중하게 작성해주세요.</string>
+    <string name="write_insight_complete_tool_tip_message">작성 완료 시 인사이트가 바로 업로드돼요</string>
+    <string name="write_insight_complete_message">인사이트 업로드가 완료되었어요.\n작성한 내 인사이트는 보관함에서\n확인할 수 있어요.</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
     <string name="hint_date_of_visit">예시) 2024.01.01</string>
