feat: 인사이트 요약 입력 구현

--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -276,6 +276,9 @@
     <string name="write_insight_complete_message">인사이트 업로드가 완료되었어요.\n작성한 내 인사이트는 보관함에서\n확인할 수 있어요.</string>
     <string name="select_from_album">앨범에서 선택</string>
     <string name="take_picture">사진 촬영</string>
+    <string name="write_insight_summary_description">교환을 위해 미리 공개하는 내용이에요. 잘 작성할수록 교환 성공률이 올라가요. 작성시 장점과 단점을 균형있게 작성해주세요.</string>
+    <string name="insight_summary_input_count_guide">최소30자-최대200자</string>
+    <string name="insight_summary_hint">예시)\n지하철역과 도보 10분 거리로 접근성이 좋지만, 근처 공사로 소음 문제가 있을 수 있을 것 같아요. 하지만 단지 내 공원이 잘 조성되어 있어 가족 단위 거주자에게 적합할 것 같아요.</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
     <string name="hint_date_of_visit">예시) 2024.01.01</string>
