--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="waiting_details_nonexistence">대기 중인 내역이 없어요.</string>
     <string name="refusal_details_existence">거절 내역은 최근 7일간의 기록만 표시돼요.</string>
     <string name="refusal_details_nonexistence">거절 내역이 없어요.</string>
-    <string name="exchange_details_existence">교환한 인사이트는 보관함에 저장되며, 완료 내역은\n최근 7일간의 기록만 표시돼요.</string>
+    <string name="exchange_details_existence">교환한 인사이트는 보관함에 저장되며, 완료 내역은 최근 7일간의 기록만 표시돼요.</string>
     <string name="exchange_details_nonexistence">교환 완료 내역이 없어요.</string>
     <string name="all">전체</string>
     <string name="see_by_apt">단지별 보기</string>
