feat : 인사이트 작성화면에서 다녀온 날짜의 예시를 오늘 날짜로 수정

--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -296,5 +296,5 @@
     <string name="essential">(필수)</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
-    <string name="hint_date_of_visit">예시) 2024.01.01</string>
+    <string name="hint_date_of_visit">예시) %1$s</string>
 </resources>
