--- a/component/src/main/res/values/strings.xml
+++ b/component/src/main/res/values/strings.xml
@@ -292,6 +292,7 @@
     <string name="required_privacy_term">[필수] 개인 정보 수집 이용</string>
     <string name="optional_marketing_and_notifications">[선택] 마케팅 수신 및 앱 알림 동의</string>
     <string name="agree_and_continue">동의하고 계속하기</string>
+    <string name="current_version_info">현재 버전 %1$s</string>
 
     <string name="hint_home_search">어떤 지역의 인사이트를 찾으시나요?</string>
     <string name="hint_date_of_visit">예시) 2024.01.01</string>
